feat complete devops setup with ngrok,webhooks and test data.

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,21 @@
 # Database Configuration
 DB_USER=pawpaw
-DB_PASSWORD=pawpaw_secret
-DB_NAME=pawpaw_db
-DATABASE_URL=postgres://pawpaw:pawpaw_secret@postgres:5432/pawpaw_db
+DB_PASSWORD=pawpaw_dev
+DB_NAME=pawpaw
+POSTGRES_USER=pawpaw
+POSTGRES_PASSWORD=pawpaw_dev
+POSTGRES_DB=pawpaw
+DATABASE_URL=postgresql://pawpaw:pawpaw_dev@postgres:5432/pawpaw
 
 # Redis Configuration
 REDIS_URL=redis://redis:6379
 
 # Application Secrets
 JWT_SECRET=your_jwt_secret_key_change_in_prod
-STRIPE_SECRET_KEY=sk_test_your_stripe_key
-STRIPE_PUBLIC_KEY=pk_test_your_stripe_key
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+STRIPE_PUBLISHABLE_KEY=pk_test_YOUR_STRIPE_PUBLISHABLE_KEY_HERE
+STRIPE_SECRET_KEY=sk_test_YOUR_STRIPE_SECRET_KEY_HERE
+STRIPE_WEBHOOK_SECRET=whsec_test_YOUR_WEBHOOK_SECRET_HERE
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_YOUR_STRIPE_PUBLISHABLE_KEY_HERE
 
 # Frontend Configuration
 VITE_API_URL=http://localhost:4000
