fix: correct dockerfile permissions for prisma generate

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,61 +1,45 @@
+# --- Build Stage ---
 FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Install dependencies
+# Instalar dependencias del sistema
 RUN apk add --no-cache openssl openssl-dev python3 make g++
+
 COPY package*.json ./
 COPY prisma ./prisma/
 
-# Install dependencies including devDependencies for build
 RUN npm ci
 
-# Copy source code
 COPY . .
 
-# Generate Prisma Client
+# Generar Prisma Client (ANTES de cambiar usuario)
 RUN npx prisma generate
 
 # Build TypeScript
 RUN npm run build
 
 # --- Production Stage ---
-FROM node:20-alpine AS runner
+FROM node:20-alpine
 
 WORKDIR /app
 
-# Create non-root user
+RUN apk add --no-cache openssl
+
+# Crear usuario NO-ROOT (DESPUÉS de generar Prisma)
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 expressjs
 
-# Install OpenSSL for production
-RUN apk add --no-cache openssl
-
-# Install production dependencies only
-COPY package*.json ./
-RUN npm ci --only=production
-
-# Copy built artifacts and necessary files
+COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/prisma ./prisma
-COPY --from=builder /app/package.json ./package.json
+COPY package*.json ./
 
-# Set ownership
-RUN chown -R expressjs:nodejs /app
-
-# Switch to non-root user
 USER expressjs
 
-# Environment variables
-ENV NODE_ENV=production
-ENV PORT=4000
-
-# Expose port
 EXPOSE 4000
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:4000/health || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:4000/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})"
 
-# Start application
 CMD ["node", "dist/index.js"]
