--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,12 @@ services:
     command: npm run dev
     networks:
       - pawpaw_net
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:4000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   # --- FRONTEND ---
   frontend:
@@ -79,6 +85,8 @@ services:
       args:
         VITE_STRIPE_PUBLISHABLE_KEY: ${VITE_STRIPE_PUBLISHABLE_KEY}
     container_name: pawpaw_frontend
+    env_file:
+      - .env.admin
     environment:
       VITE_API_URL: http://localhost:4000
       VITE_STRIPE_PUBLISHABLE_KEY: ${VITE_STRIPE_PUBLISHABLE_KEY}
@@ -90,6 +98,30 @@ services:
     command: npm run dev -- --host
     networks:
       - pawpaw_net
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5173"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # --- PROXY ---
+  nginx:
+    image: nginx:alpine
+    container_name: pawpaw_nginx
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      backend:
+        condition: service_healthy
+      frontend:
+        condition: service_healthy
+    networks:
+      - pawpaw_net
+
 
 volumes:
   postgres_data:
