fix: resolve remaining linting errors in backend and frontend

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,40 @@
 # Database Configuration
-DB_USER=pawpaw
-DB_PASSWORD=pawpaw_dev
-DB_NAME=pawpaw
-POSTGRES_USER=pawpaw
-POSTGRES_PASSWORD=pawpaw_dev
-POSTGRES_DB=pawpaw
-DATABASE_URL=postgresql://pawpaw:pawpaw_dev@postgres:5432/pawpaw
+# Requirements: Strong password (min 16 chars), alphanumeric + special chars
+DB_USER=CHANGE_ME_db_user
+DB_PASSWORD=CHANGE_ME_secure_db_password
+DB_NAME=pawpaw_db
+POSTGRES_USER=CHANGE_ME_postgres_user
+POSTGRES_PASSWORD=CHANGE_ME_secure_postgres_password
+POSTGRES_DB=pawpaw_db
+# Connection string format: postgresql://USER:PASSWORD@HOST:PORT/DB_NAME
+DATABASE_URL=CHANGE_ME_postgresql_connection_string
 
 # Redis Configuration
-REDIS_URL=redis://redis:6379
+# Requirements: Secure connection string, preferably with authentication
+REDIS_URL=CHANGE_ME_redis_connection_string
 
 # Application Secrets
-JWT_SECRET=your_jwt_secret_key_change_in_prod
-STRIPE_PUBLISHABLE_KEY=pk_test_YOUR_STRIPE_PUBLISHABLE_KEY_HERE
-STRIPE_SECRET_KEY=sk_test_YOUR_STRIPE_SECRET_KEY_HERE
-STRIPE_WEBHOOK_SECRET=whsec_test_YOUR_WEBHOOK_SECRET_HERE
-VITE_STRIPE_PUBLISHABLE_KEY=pk_test_YOUR_STRIPE_PUBLISHABLE_KEY_HERE
+# Requirements: Minimum 32 characters, high entropy (random string)
+JWT_SECRET=CHANGE_ME_min_32_chars_random_string_for_jwt
+
+# Stripe Configuration
+# Requirements: Use Live keys for production, Test keys for development. Starts with pk_live/sk_live or pk_test/sk_test
+STRIPE_PUBLISHABLE_KEY=CHANGE_ME_pk_stripe_key
+STRIPE_SECRET_KEY=CHANGE_ME_sk_stripe_key
+STRIPE_WEBHOOK_SECRET=CHANGE_ME_whsec_stripe_webhook_secret
+VITE_STRIPE_PUBLISHABLE_KEY=CHANGE_ME_pk_stripe_key
 
 # Frontend Configuration
-VITE_API_URL=http://localhost:4000
+# Requirements: Full URL of the backend API
+VITE_API_URL=CHANGE_ME_backend_api_url
 
 # Admin Configuration
-ADMIN_EMAIL=admin@pawpaw.com
-ADMIN_PASSWORD=admin123
+# Requirements: Valid email address
+ADMIN_EMAIL=CHANGE_ME_admin_email
+# Requirements: Strong password (min 12 chars, upper, lower, number, special)
+ADMIN_PASSWORD=CHANGE_ME_strong_admin_password
 
 # Directus Configuration (If used)
-DIRECTUS_KEY=secure_random_key
-DIRECTUS_SECRET=secure_random_secret
+# Requirements: High entropy random string
+DIRECTUS_KEY=CHANGE_ME_secure_random_key
+DIRECTUS_SECRET=CHANGE_ME_secure_random_secret
