--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -137,38 +137,177 @@ jobs:
     needs: [test-backend, test-frontend]
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Backend Image
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Backend Metadata & Build
+      - name: Extract metadata (tags, labels) for Backend
+        id: meta-backend
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}/pawpaw-backend
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,format=long
+            type=semver,pattern={{version}}
+
+      - name: Build and Push Backend Image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           file: ./backend/Dockerfile
-          push: false # Set to true if registry is configured
-          tags: pawpaw-backend:latest
+          push: true
+          tags: ${{ steps.meta-backend.outputs.tags }}
+          labels: ${{ steps.meta-backend.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Build Frontend Image
+      # Frontend Metadata & Build
+      - name: Extract metadata (tags, labels) for Frontend
+        id: meta-frontend
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}/pawpaw-frontend
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,format=long
+            type=semver,pattern={{version}}
+
+      - name: Build and Push Frontend Image
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           file: ./frontend/Dockerfile
-          push: false # Set to true if registry is configured
-          tags: pawpaw-frontend:latest
+          push: true
+          tags: ${{ steps.meta-frontend.outputs.tags }}
+          labels: ${{ steps.meta-frontend.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   # --- DEPLOY STAGE ---
-  deploy:
+  deploy-backend:
     needs: build-images
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to Production
-        run: echo "Deploying to production server..."
-        # Add actual deployment steps here (e.g., SSH, kubectl, etc.)
+      - uses: actions/checkout@v4
+
+      - name: Install Railway CLI
+        run: npm i -g @railway/cli
+
+      - name: Deploy to Railway
+        run: railway up --service backend --detach
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+      - name: Wait for Deployment
+        run: |
+          echo "Waiting for deployment to stabilize..."
+          sleep 60
+
+      - name: Run Database Migrations
+        run: railway run --service backend "cd backend && npx prisma migrate deploy"
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+      - name: Health Check
+        run: |
+          echo "Checking Backend Health..."
+          RETRIES=3
+          URL="https://api.pawpaw.com/health"
+          
+          for i in $(seq 1 $RETRIES); do
+            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $URL || echo "000")
+            if [ "$HTTP_CODE" -eq 200 ]; then
+              echo "Health check passed!"
+              exit 0
+            fi
+            echo "Attempt $i failed (Status: $HTTP_CODE). Retrying in 20s..."
+            sleep 20
+          done
+          
+          echo "Health check failed after $RETRIES attempts."
+          exit 1
+
+      - name: Rollback on Failure
+        if: failure()
+        run: |
+          echo "Deployment failed. Initiating rollback..."
+          railway rollback --service backend
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+      - name: Notify Result
+        if: always()
+        run: |
+          if [ "${{ job.status }}" == "success" ]; then
+            echo "Backend Deployment Successful! 🚀"
+          else
+            echo "Backend Deployment Failed! ❌"
+          fi
+
+  deploy-frontend:
+    needs: build-images
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    env:
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Vercel CLI
+        run: npm i -g vercel
+
+      - name: Deploy to Vercel
+        working-directory: ./frontend
+        run: vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }} --yes
+
+      - name: Health Check
+        run: |
+          echo "Checking Frontend Health..."
+          RETRIES=3
+          URL="https://pawpaw.com"
+          
+          for i in $(seq 1 $RETRIES); do
+            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $URL || echo "000")
+            if [ "$HTTP_CODE" -eq 200 ]; then
+              echo "Health check passed!"
+              exit 0
+            fi
+            echo "Attempt $i failed (Status: $HTTP_CODE). Retrying in 20s..."
+            sleep 20
+          done
+          
+          echo "Health check failed after $RETRIES attempts."
+          exit 1
+
+      - name: Rollback on Failure
+        if: failure()
+        run: |
+          echo "Deployment failed. Initiating rollback..."
+          vercel rollback --token=${{ secrets.VERCEL_TOKEN }} --yes || echo "Rollback command failed or not supported, check Vercel dashboard."
+
+      - name: Notify Result
+        if: always()
+        run: |
+          if [ "${{ job.status }}" == "success" ]; then
+            echo "Frontend Deployment Successful! 🚀"
+          else
+            echo "Frontend Deployment Failed! ❌"
+          fi
+
