--- a/backend/package.json
+++ b/backend/package.json
@@ -28,14 +28,16 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-prom-bundle": "^8.0.0",
+    "express-rate-limit": "^8.2.1",
     "form-data": "^4.0.5",
     "helmet": "^7.1.0",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "prom-client": "^15.1.3",
+    "rate-limit-redis": "^4.3.1",
     "stripe": "^14.14.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -65,5 +67,8 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
