--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "jsdom": "^27.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.46.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.18.0",
     "vite": "^6.0.0",
