--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,6 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "test": "vitest",
-    "cypress:run": "cypress run",
-    "cypress:open": "cypress open",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -31,13 +29,12 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
-    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.23",
-    "cypress": "^15.9.0",
+    "cypress-axe": "^1.7.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
@@ -48,18 +45,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.18.0",
-    "vercel": "^50.4.8",
     "vite": "^6.0.0",
     "vitest": "^4.0.17"
-  },
-  "overrides": {
-    "tar": "^7.5.6",
-    "undici": "^6.23.0",
-    "@vercel/node": {
-      "path-to-regexp": "^6.3.0"
-    },
-    "@vercel/remix-builder": {
-      "path-to-regexp": "^6.3.0"
-    }
   }
 }
