--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,24 +1,19 @@
-# Server Configuration
-PORT=4000
-NODE_ENV=development
-
-# Frontend URL for CORS
-# Requirements: Exact origin of the frontend application
-CORS_ORIGIN=CHANGE_ME_frontend_origin_url
-
 # Database
-# Requirements: Full connection string with credentials
-DATABASE_URL=CHANGE_ME_postgresql_connection_string
+DATABASE_URL=postgresql://user:password@localhost:5432/pawpaw
 
 # Redis
-# Requirements: Full connection string
-REDIS_URL=CHANGE_ME_redis_connection_string
+REDIS_URL=redis://:password@localhost:6379
+
+# Authentication
+JWT_SECRET=your-secret-key-min-32-characters-long
 
 # Stripe
-# Requirements: Stripe secret keys (sk_...) and webhook secret (whsec_...)
-STRIPE_SECRET_KEY=CHANGE_ME_sk_stripe_key
-STRIPE_WEBHOOK_SECRET=CHANGE_ME_whsec_stripe_webhook_secret
+STRIPE_SECRET_KEY=sk_live_your_stripe_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 
-# JWT
-# Requirements: Minimum 32 characters, high entropy (random string)
-JWT_SECRET=CHANGE_ME_min_32_chars_random_string_for_jwt
+# Environment
+NODE_ENV=development
+PORT=4000
+
+# CORS
+CORS_ORIGIN=http://localhost:5173
