--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend API for Paw Paw Urban Show",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx -y typescript@5.3.3 tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest",
