fix: Remove working-directory causing path duplication in Vercel deploy and cleanup YAML garbage

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -192,15 +192,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install Railway CLI
+        run: npm i -g @railway/cli
+
+      - name: Deploy to Railway
+        run: railway up --service backend --detach
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+      - name: Wait for Deployment
+        run: |
+          echo "Waiting for deployment to stabilize..."
+          sleep 60
+
+      - name: Run Database Migrations
+        run: railway run --service backend "cd backend && npx prisma migrate deploy"
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
       - name: Health Check
         run: |
           echo "Checking Backend Health..."
-          RETRIES=5
-          RAILWAY_PUBLIC_DOMAIN=${{ secrets.RAILWAY_PUBLIC_DOMAIN }}
-          HEALTH_CHECK_URL="https://${RAILWAY_PUBLIC_DOMAIN}/health"
+          RETRIES=3
+          URL="https://api.pawpaw.com/health"
           
           for i in $(seq 1 $RETRIES); do
-            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_CHECK_URL || echo "000")
+            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $URL || echo "000")
             if [ "$HTTP_CODE" -eq 200 ]; then
               echo "Health check passed!"
               exit 0
@@ -212,6 +229,25 @@ jobs:
           echo "Health check failed after $RETRIES attempts."
           exit 1
 
+      - name: Rollback on Failure
+        if: failure()
+        run: |
+          echo "Deployment failed. Initiating rollback..."
+          railway rollback --service backend
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+
+      - name: Notify Result
+        if: always()
+        run: |
+          if [ "${{ job.status }}" == "success" ]; then
+            echo "Backend Deployment Successful! 🚀
+
+working-directory: ./frontend
+          "
+          else
+            echo "Backend Deployment Failed! ❌"
+          fi
 
   deploy-frontend:
     needs: [test-frontend]
@@ -236,5 +272,5 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           vercel-args: '--prod'
-          working-directory: ./frontend
           vercel-version: '50.4.8'
+          
