--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -196,10 +196,24 @@ jobs:
         run: |
           echo "Checking Backend Health..."
           RETRIES=30
-          RAILWAY_PUBLIC_DOMAIN=${{ secrets.RAILWAY_PUBLIC_DOMAIN }}
           
-          # Use root path which is confirmed to be working
-          HEALTH_CHECK_URL="https://${RAILWAY_PUBLIC_DOMAIN}/"
+          # Retrieve and sanitize the domain secret
+          DOMAIN="${{ secrets.RAILWAY_PUBLIC_DOMAIN }}"
+          # Remove protocol if present
+          DOMAIN=${DOMAIN#https://}
+          DOMAIN=${DOMAIN#http://}
+          # Remove trailing slash if present
+          DOMAIN=${DOMAIN%/}
+          
+          # Fallback if secret is missing (based on user provided info)
+          if [ -z "$DOMAIN" ]; then
+            echo "WARNING: RAILWAY_PUBLIC_DOMAIN secret appears empty."
+            echo "Using fallback domain for recovery: pawpaw-production-d636.up.railway.app"
+            DOMAIN="pawpaw-production-d636.up.railway.app"
+          fi
+          
+          # Construct URL with root path
+          HEALTH_CHECK_URL="https://${DOMAIN}/"
           
           echo "Checking URL: $HEALTH_CHECK_URL"
           echo "Waiting for Railway deployment to propagate..."
@@ -207,7 +221,8 @@ jobs:
           sleep 30
           
           for i in $(seq 1 $RETRIES); do
-            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_CHECK_URL || echo "000")
+            # Use -L to follow redirects
+            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" -L "$HEALTH_CHECK_URL" || echo "000")
             if [ "$HTTP_CODE" -eq 200 ]; then
               echo "Health check passed!"
               exit 0
@@ -215,7 +230,10 @@ jobs:
             echo "Attempt $i failed (Status: $HTTP_CODE). Retrying in 10s..."
             sleep 10
           done
+          
           echo "Health check failed after $RETRIES attempts."
+          echo "Debugging info - Response Headers:"
+          curl -I -L "$HEALTH_CHECK_URL"
           exit 1
 
       - name: Notify Result
