fix: Robust health check with debug info and domain validation

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -199,23 +199,28 @@ jobs:
           
           # Retrieve and sanitize the domain secret
           DOMAIN="${{ secrets.RAILWAY_PUBLIC_DOMAIN }}"
+          # Trim whitespace
+          DOMAIN=$(echo "$DOMAIN" | xargs)
+
           # Remove protocol if present
           DOMAIN=${DOMAIN#https://}
           DOMAIN=${DOMAIN#http://}
           # Remove trailing slash if present
           DOMAIN=${DOMAIN%/}
           
-          # Fallback if secret is missing (based on user provided info)
-          if [ -z "$DOMAIN" ]; then
-            echo "WARNING: RAILWAY_PUBLIC_DOMAIN secret appears empty."
-            echo "Using fallback domain for recovery: pawpaw-production-d636.up.railway.app"
+          # Fallback if secret is missing or looks invalid
+          if [ -z "$DOMAIN" ] || [[ "$DOMAIN" != *"."* ]]; then
+            echo "WARNING: RAILWAY_PUBLIC_DOMAIN secret appears empty or invalid."
+            echo "Using fallback domain: pawpaw-production-d636.up.railway.app"
             DOMAIN="pawpaw-production-d636.up.railway.app"
           fi
           
-          # Construct URL with root path
-          HEALTH_CHECK_URL="https://${DOMAIN}/"
+          # Construct URLs
+          HEALTH_CHECK_URL="https://${DOMAIN}/health"
+          ROOT_URL="https://${DOMAIN}/"
           
-          echo "Checking URL: $HEALTH_CHECK_URL"
+          echo "Target Domain: $DOMAIN"
+          echo "Health Check URL: $HEALTH_CHECK_URL"
           echo "Waiting for Railway deployment to propagate..."
           # Initial wait to allow build to start
           sleep 30
@@ -232,8 +237,12 @@ jobs:
           done
           
           echo "Health check failed after $RETRIES attempts."
-          echo "Debugging info - Response Headers:"
-          curl -I -L "$HEALTH_CHECK_URL"
+          echo "Debugging info:"
+          echo "1. Verbose curl to Health Endpoint:"
+          curl -v -L "$HEALTH_CHECK_URL" || true
+          echo "--------------------------------"
+          echo "2. Verbose curl to Root Endpoint:"
+          curl -v -L "$ROOT_URL" || true
           exit 1
 
       - name: Notify Result
