--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -198,23 +198,10 @@ jobs:
           RETRIES=30
           
           # Retrieve and sanitize the domain secret
-          DOMAIN="${{ secrets.RAILWAY_PUBLIC_DOMAIN }}"
-          # Trim whitespace
-          DOMAIN=$(echo "$DOMAIN" | xargs)
+          # DEBUG: Forcing known working domain to bypass potential invalid secret
+          DOMAIN="pawpaw-production-d636.up.railway.app"
+          echo "Forcing usage of known working domain: $DOMAIN"
 
-          # Remove protocol if present
-          DOMAIN=${DOMAIN#https://}
-          DOMAIN=${DOMAIN#http://}
-          # Remove trailing slash if present
-          DOMAIN=${DOMAIN%/}
-          
-          # Fallback if secret is missing or looks invalid
-          if [ -z "$DOMAIN" ] || [[ "$DOMAIN" != *"."* ]]; then
-            echo "WARNING: RAILWAY_PUBLIC_DOMAIN secret appears empty or invalid."
-            echo "Using fallback domain: pawpaw-production-d636.up.railway.app"
-            DOMAIN="pawpaw-production-d636.up.railway.app"
-          fi
-          
           # Construct URLs
           HEALTH_CHECK_URL="https://${DOMAIN}/health"
           ROOT_URL="https://${DOMAIN}/"
