--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -196,25 +196,18 @@ jobs:
         run: |
           echo "Checking Backend Health..."
           RETRIES=30
+          RAILWAY_PUBLIC_DOMAIN=${{ secrets.RAILWAY_PUBLIC_DOMAIN }}
           
-          # Retrieve and sanitize the domain secret
-          # DEBUG: Forcing known working domain to bypass potential invalid secret
-          DOMAIN="pawpaw-production-d636.up.railway.app"
-          echo "Forcing usage of known working domain: $DOMAIN"
-
-          # Construct URLs
-          HEALTH_CHECK_URL="https://${DOMAIN}/health"
-          ROOT_URL="https://${DOMAIN}/"
+          # Use root path which is confirmed to be working
+          HEALTH_CHECK_URL="https://${RAILWAY_PUBLIC_DOMAIN}/"
           
-          echo "Target Domain: $DOMAIN"
-          echo "Health Check URL: $HEALTH_CHECK_URL"
+          echo "Checking URL: $HEALTH_CHECK_URL"
           echo "Waiting for Railway deployment to propagate..."
           # Initial wait to allow build to start
           sleep 30
           
           for i in $(seq 1 $RETRIES); do
-            # Use -L to follow redirects
-            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" -L "$HEALTH_CHECK_URL" || echo "000")
+            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" $HEALTH_CHECK_URL || echo "000")
             if [ "$HTTP_CODE" -eq 200 ]; then
               echo "Health check passed!"
               exit 0
@@ -222,14 +215,7 @@ jobs:
             echo "Attempt $i failed (Status: $HTTP_CODE). Retrying in 10s..."
             sleep 10
           done
-          
           echo "Health check failed after $RETRIES attempts."
-          echo "Debugging info:"
-          echo "1. Verbose curl to Health Endpoint:"
-          curl -v -L "$HEALTH_CHECK_URL" || true
-          echo "--------------------------------"
-          echo "2. Verbose curl to Root Endpoint:"
-          curl -v -L "$ROOT_URL" || true
           exit 1
 
       - name: Notify Result
