--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -198,6 +198,12 @@ jobs:
           RETRIES=30
           RAILWAY_PUBLIC_DOMAIN=${{ secrets.RAILWAY_PUBLIC_DOMAIN }}
           
+          # Fallback to known domain if secret is missing
+          if [ -z "$RAILWAY_PUBLIC_DOMAIN" ]; then
+            echo "Warning: RAILWAY_PUBLIC_DOMAIN secret is not set. Using default."
+            RAILWAY_PUBLIC_DOMAIN="pawpaw-production-d636.up.railway.app"
+          fi
+
           # Use root path which is confirmed to be working
           HEALTH_CHECK_URL="https://${RAILWAY_PUBLIC_DOMAIN}/"
           
