--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.6.1",
     "@tanstack/react-query": "^5.90.19",
@@ -19,9 +21,10 @@
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.71.1",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.3.5",
+    "zod": "^3.24.1",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
@@ -34,6 +37,7 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^4.0.18",
     "autoprefixer": "^10.4.23",
     "cypress-axe": "^1.7.0",
     "eslint": "^9.39.1",
