--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/nodemailer": "^7.0.5",
     "husky": "^9.1.7"
+  },
+  "dependencies": {
+    "nodemailer": "^7.0.12"
   }
 }
