fix(backend): resolve nodemailer TS error and checkout service fetch mock

--- a/backend/package.json
+++ b/backend/package.json
@@ -52,8 +52,9 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^2.0.0",
-    "@types/node-cron": "^3.0.11",
     "@types/node": "^20.11.16",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.5",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
