--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.12",
     "prom-client": "^15.1.3",
     "rate-limit-redis": "^4.3.1",
     "stripe": "^14.14.0",
