--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^5.10.0",
     "@types/multer": "^2.0.0",
     "@types/node-cron": "^3.0.11",
+    "@types/socket.io": "^3.0.1",
     "@types/uuid": "^9.0.7",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
@@ -39,6 +40,7 @@
     "nodemailer": "^7.0.12",
     "prom-client": "^15.1.3",
     "rate-limit-redis": "^4.3.1",
+    "socket.io": "^4.8.3",
     "stripe": "^14.14.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -65,6 +67,7 @@
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "prisma": "^5.10.0",
+    "socket.io-client": "^4.8.3",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
