feat: accessibility & typography updates
- Implemented responsive typography scale in index.css
- Updated Header and Footer to use accessible neutral colors (AA contrast)
- Added automated WCAG contrast tests
- Updated docker-compose.prod.yml with frontend build args

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -75,6 +75,9 @@ services:
   frontend:
     build:
       context: ./frontend
+      args:
+        VITE_API_URL: ${VITE_API_URL}
+        VITE_STRIPE_PUBLISHABLE_KEY: ${VITE_STRIPE_PUBLISHABLE_KEY}
     image: pawpaw-frontend:latest
     restart: always
     environment:
