fix: resolve accessibility violations and update checkout service

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,9 @@ RUN npm ci
 ARG VITE_STRIPE_PUBLISHABLE_KEY
 ENV VITE_STRIPE_PUBLISHABLE_KEY=$VITE_STRIPE_PUBLISHABLE_KEY
 
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 # Copy source code
 COPY . .
 
