--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.2",
+    "minimatch": "^10.1.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
